fix styles on mobile view

--- a/src/Components/AboutRecipe/AboutRecipe.scss
+++ b/src/Components/AboutRecipe/AboutRecipe.scss
@@ -41,7 +41,7 @@
     // flex-wrap: wrap;
 
     &__indiv {
-        height: 31px;
+        height: 36px;
         border: 2px solid $DarkBrown;
         border-radius: 50%;
         margin: 2px 3px;
@@ -67,8 +67,8 @@
 }
 .vanilla {
     padding: 9px 0px;
-    height: 29px;
-    width: 49px;
+    height: 36px;
+    width: 36px;
 
     @include tablet {
         height: 49px;
