--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -10,6 +10,13 @@
     // justify-content: center;
     align-items: center;
 
+    // &__top {
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     justify-content: center;
+    // }
+
     &__logo {
         height: 120px;
         width: 120px;
@@ -52,6 +59,7 @@
             font-weight: bold;
             display: flex;
             align-items: center;
+            justify-content: center;
 
             &--heart {
                 padding-left: 5px;
